--- a/etc/supervisord-master.conf
+++ b/etc/supervisord-master.conf
@@ -1,4 +1,4 @@
 [program:master]
-command=mesos-master --zk=zk://localhost:2181/mesos
+command=mesos-master --zk=zk://localhost:2181/mesos --log_dir=/var/log --quiet=true
 autorestart=true
 
